aun falta dar covertura a varios metodos